--- a/ECommerceProject/Web.config
+++ b/ECommerceProject/Web.config
@@ -9,6 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <add name="ECommerceConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=ECommerceProject-Database;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ECommerceProject-20210924104935.mdf;Initial Catalog=aspnet-ECommerceProject-20210924104935;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
